@@ -24,13 +24,18 @@
 
 package com.jaeksoft.searchlib;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
 import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
+import java.util.LinkedList;
 import java.util.Properties;
 
+import org.apache.commons.io.IOUtils;
 import org.apache.log4j.BasicConfigurator;
 import org.apache.log4j.Logger;
 import org.apache.log4j.PropertyConfigurator;
@@ -71,8 +76,19 @@ public class Logging {
 
 	}
 
-	private static Properties getLoggerProperties() {
-		File dirLog = new File(ClientCatalog.OPENSEARCHSERVER_DATA, "logs");
+	private final static File getLogDirectory() {
+		return new File(ClientCatalog.OPENSEARCHSERVER_DATA, "logs");
+	}
+
+	public final static File[] getLogFiles() {
+		File dirLog = getLogDirectory();
+		if (!dirLog.exists())
+			return null;
+		return dirLog.listFiles();
+	}
+
+	private final static Properties getLoggerProperties() {
+		File dirLog = getLogDirectory();
 		if (!dirLog.exists())
 			dirLog.mkdir();
 		Properties props = new Properties();
@@ -139,5 +155,44 @@ public class Logging {
 		if (noLogger(System.out, msg, null))
 			return;
 		logger.info(msg);
+	}
+
+	public final static String readLogs(int lines, String fileName)
+			throws IOException {
+		if (fileName == null)
+			return null;
+		File logFile = new File(getLogDirectory(), fileName);
+		if (!logFile.exists())
+			return null;
+		FileReader fr = null;
+		BufferedReader br = null;
+		StringWriter sw = null;
+		PrintWriter pw = null;
+		LinkedList<String> list = new LinkedList<String>();
+		try {
+			fr = new FileReader(logFile);
+			br = new BufferedReader(fr);
+			String line = null;
+			int size = 0;
+			while ((line = br.readLine()) != null) {
+				list.add(line);
+				if (size++ > lines)
+					list.remove();
+			}
+			sw = new StringWriter();
+			pw = new PrintWriter(sw);
+			for (String l : list)
+				pw.println(l);
+			return sw.toString();
+		} finally {
+			if (br != null)
+				IOUtils.closeQuietly(br);
+			if (fr != null)
+				IOUtils.closeQuietly(fr);
+			if (pw != null)
+				IOUtils.closeQuietly(pw);
+			if (sw != null)
+				IOUtils.closeQuietly(sw);
+		}
 	}
 }
